--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,8 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-console": 0, 
+  "no-empty": 0,
+  "no-irregular-whitespace":0,
     }
 }
